[gd_scene load_steps=4 format=2]

[ext_resource path="res://events/event4/altars-2.png.png" type="Texture" id=1]
[ext_resource path="res://events/event4/electronEvent.gd" type="Script" id=2]
[ext_resource path="res://skelbunny/SkelBunny.tscn" type="PackedScene" id=3]

[node name="electronEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="altars-2png" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 64, 37.5 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.670588 )

[node name="Label" type="Label" parent="."]
margin_left = 131.0
margin_top = 33.0
margin_right = 386.0
margin_bottom = 187.0
rect_scale = Vector2( 3, 3 )
align = 1
valign = 1
autowrap = true

[node name="Button3" type="Button" parent="."]
margin_left = 349.0
margin_top = 495.0
margin_right = 717.0
margin_bottom = 579.0
text = "CONTINUE"

[node name="Button" type="Button" parent="."]
margin_left = 349.485
margin_top = 495.0
margin_right = 717.485
margin_bottom = 533.0
text = "MAKE AN OFFER! (lose 2 max hp and gain 1 max energy)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 432.839
margin_top = 546.343
margin_right = 584.839
margin_bottom = 579.343
text = "ignore the altar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkelBunny" parent="." instance=ExtResource( 3 )]
position = Vector2( -93.3649, 284.183 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="pressed" from="Button3" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
